sn-development-k8s/chat/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sn-chat
spec:
  selector:
    app: sn-chat
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  type: LoadBalancer
